# py-web-pack

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.docker/: dev.Dockerfile
apps/my_super_duper_app/: app.py  requirements.txt
py_web_park/: app_maker.py  cli.py  enums.py  settings.py
py_web_park/cookiecutter/: cookiecutter.json
py_web_park/cookiecutter/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
py_web_park/cookiecutter/{{ cookiecutter.project_slug }}/: app.py  requirements.txt
